tests/machine/x/pl/group_items_iteration.error
exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/group_items_iteration.pl:43: user:main is/2: Type error: `character' expected, found `map{tag:"b",total:0}' (a dict)
